# windows-graphics-programming-src

./: .gitignore  CMakeLists.txt  GenerateCMakeLists.py  build.bat
Chapt_01/: CMakeLists.txt
Chapt_01/GDISpeed/: CMakeLists.txt
Chapt_01/Hello1/: CMakeLists.txt
Chapt_01/Hello2/: CMakeLists.txt
Chapt_01/Hello3/: CMakeLists.txt
Chapt_01/Hello4/: CMakeLists.txt
Chapt_01/SetProc/: CMakeLists.txt
Chapt_02/: CMakeLists.txt
Chapt_02/HTMLDrv/: CMakeLists.txt
Chapt_02/SysCall/: CMakeLists.txt
Chapt_02/Timer/: CMakeLists.txt  Timer.cpp
Chapt_03/: CMakeLists.txt
Chapt_03/Fosterer/: CMakeLists.txt
Chapt_03/Handles/: CMakeLists.txt
Chapt_03/Periscope/: CMakeLists.txt
Chapt_03/QueryTab/: CMakeLists.txt
Chapt_03/TestPeriscope/: CMakeLists.txt
Chapt_04/: CMakeLists.txt
Chapt_04/DDISpy/: CMakeLists.txt
Chapt_04/DDIWatcher/: CMakeLists.txt
Chapt_04/Diver/: CMakeLists.txt
Chapt_04/Patcher/: CMakeLists.txt  main.cpp
Chapt_04/Pogy/: CMakeLists.txt
Chapt_04/PogyGDI/: CMakeLists.txt
Chapt_04/QueryDDraw/: CMakeLists.txt
Chapt_04/Skimmer/: CMakeLists.txt
Chapt_04/TestDDraw/: CMakeLists.txt
Chapt_05/: CMakeLists.txt
Chapt_05/Device/: CMakeLists.txt
Chapt_05/Ellipse/: CMakeLists.txt
Chapt_05/FrameWindow/: CMakeLists.txt
Chapt_05/WinPaint/: CMakeLists.txt
Chapt_05/WindowDC/: CMakeLists.txt
Chapt_06/: CMakeLists.txt
Chapt_06/CoordinateSpace/: CMakeLists.txt
Chapt_06/WeiQi/: CMakeLists.txt
Chapt_07/: CMakeLists.txt
Chapt_07/ClipRegion/: CMakeLists.txt
Chapt_07/ColorSpace/: CMakeLists.txt
Chapt_07/GDIObj/: CMakeLists.txt  GDIObj.cpp
Chapt_07/Mandelbrot/: CMakeLists.txt  Mandelbrot.cpp
Chapt_07/PixelSpeed/: CMakeLists.txt
Chapt_08/: CMakeLists.txt
Chapt_08/LineCurve/: CMakeLists.txt  LineCurve.cpp
Chapt_09/: CMakeLists.txt
Chapt_09/Areas/: Area.cpp  CMakeLists.txt
Chapt_10/: CMakeLists.txt
Chapt_10/Bitmaps/: Bitmaps.cpp  CMakeLists.txt
Chapt_10/Scrambler/: CMakeLists.txt
Chapt_11/: CMakeLists.txt
Chapt_11/AdvBitmap/: AdvBitmap.cpp  CMakeLists.txt
Chapt_12/: CMakeLists.txt
Chapt_12/Imaging/: CMakeLists.txt
Chapt_13/: CMakeLists.txt
Chapt_13/Palette/: CMakeLists.txt
Chapt_14/: CMakeLists.txt
Chapt_14/Font/: CMakeLists.txt  Charset.cpp  TrueType.cpp
Chapt_14/FontEmbed/: CMakeLists.txt
Chapt_15/Text/: CMakeLists.txt  TextDemo.cpp
Chapt_16/: CMakeLists.txt
Chapt_16/EMF/: CMakeLists.txt  EMFMain.cpp
Chapt_16/EMF/Res/: post.cpp
Chapt_16/EMFDCTest/: CMakeLists.txt
Chapt_16/EMFScope/: CMakeLists.txt
Chapt_17/: CMakeLists.txt
Chapt_17/CodePrint/: CMakeLists.txt  progview.cpp
Chapt_17/ImagePrint/: CMakeLists.txt
Chapt_17/Printer/: CMakeLists.txt  Printer.cpp
Chapt_17/PrinterDevice/: CMakeLists.txt
Chapt_18/: CMakeLists.txt
Chapt_18/DemoD3D/: CMakeLists.txt
Chapt_18/DemoDD/: CMakeLists.txt
Chapt_18/ddbasic/: CMakeLists.txt
include/: CMakeLists.txt  EditView.cpp  Image.cpp  ImageModule.cpp  MemDump.cpp  MemDump.h  Octree.cpp  Octree.h  Rop.cpp  curve.h  ddwrap.cpp  pefile.cpp
include/jlib/: jidctint.cpp
