PROJECT(include)
FILE(GLOB_RECURSE INCLUDE_FILES
    ${PROJECT_SOURCE_DIR}/*.h
    ${PROJECT_SOURCE_DIR}/*.hpp
)

FILE(GLOB_RECURSE SRC_FILES
    ${PROJECT_SOURCE_DIR}/*.c
    ${PROJECT_SOURCE_DIR}/*.cpp
)

GROUP_FILES(${INCLUDE_FILES}    "Header Files")
GROUP_FILES(${SRC_FILES}        "Source Files")

ADD_LIBRARY(
    ${PROJECT_NAME}
    STATIC
    ${INCLUDE_FILES}
    ${SRC_FILES}
)