PROJECT(CodePrint)
FILE(GLOB_RECURSE INCLUDE_FILES
    ${PROJECT_SOURCE_DIR}/*.h
    ${PROJECT_SOURCE_DIR}/*.hpp
)

FILE(GLOB_RECURSE SRC_FILES 
    ${PROJECT_SOURCE_DIR}/*.c
    ${PROJECT_SOURCE_DIR}/*.cpp
)

SOURCE_GROUP("Header Files"            FILES "${INCLUDE_FILES}")
SOURCE_GROUP("Source Files"            FILES "${SRC_FILES}")

ADD_EXECUTABLE(
    ${PROJECT_NAME}
    ${INCLUDE_FILES}
    ${SRC_FILES}
)
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES LINK_FLAGS "/SUBSYSTEM:WINDOWS")
TARGET_LINK_LIBRARIES(${PROJECT_NAME} include ddraw)
SET_TARGET_PROPERTIES(CodePrint PROPERTIES FOLDER "Chapt_17")